# glyph-zk

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
contracts/: GLYPHRootUpdaterMinimal.sol  GLYPHVerifier.sol
deployments/: hoodi.json  hoodi_groth16_3publics.json  hoodi_groth16_many.json  sepolia.json  sepolia_groth16_3publics.json  sepolia_groth16_many.json
docs/: QUICKSTART.md  documentation.md  map.md
docs/proofs/: 00_overview.md  01_sumcheck.md  02_gkr_binding.md  03_pcs_basefold.md  04_ucir_correctness.md  05_state_diff_binding.md  06_end_to_end.md  07_mechanized_proof_plan.md
docs/specs/: adapter_ir_spec.md  artifact_tag_spec.md  custom_gates_spec.md  stark_receipt_spec.md  state_transition_vm_spec.md  ucir_spec.md  verifier_spec.md
scripts/benchmarks/: bench_basefold_arity_sweep.sh  bench_basefold_mem_sweetspot.sh  bench_basefold_trace_profile.sh  bench_bn254_batch_kpi.sh  bench_bn254_g2_kpi.sh  bench_bn254_msm_kpi.sh  bench_bn254_mul_kpi.sh  bench_bn254_trace_kpi.sh  bench_glyph_adapter_hoodi.sh  bench_glyph_adapter_kpi.sh  bench_glyph_adapter_zk_kpi.sh  bench_glyph_cuda_kpi.sh  bench_glyph_evm_artifact.sh  bench_glyph_evm_local.sh  bench_glyph_evm_realproof.sh  bench_glyph_evm_round_sweep.sh  bench_glyph_evm_sepolia.sh  bench_glyph_hoodi_artifact_truncated.sh  bench_glyph_sepolia_artifact.sh  bench_glyph_sepolia_stmt.sh  bench_glyph_zk_kpi.sh  bench_groth16_hoodi.sh  bench_groth16_sepolia.sh  bench_ivc_fold_kpi.sh  bench_ivc_parallel_profile.sh  bench_packed_gkr_layout_sweep.sh  bench_stark_do_work_kpis.sh  bench_state_diff_compile_prove.sh  bench_state_diff_merkle.sh  bench_state_diff_prover_profile.sh  bench_state_transition_vm.sh  common.sh  profile_perf_config.sh  registry.json  run_all.sh  send_raw_tx.sh
scripts/benchmarks/groth16_compare/: build_groth16.sh  calc_calldata_stats.sh  circuit_many.circom  input_many.json  package-lock.json  package.json
scripts/da/: arweave_local_smoke.sh  fetch_arweave.sh  fetch_blob.sh  fetch_eigenda.sh  fetch_eigenda_v2_srs.sh  poll_eigenda.sh  run_all_profiles.sh  run_profile.sh  smoke_test.sh  state_diff_from_snapshots.sh  state_diff_onchain_verify.sh  state_diff_proof_flow.sh  state_transition_vm_flow.sh  submit_arweave.sh  submit_blob.sh  submit_eigenda.sh
scripts/da/providers/: arweave_turbo_upload.mjs  check_providers.sh  package-lock.json  package.json
scripts/deploy/: .env.hoodi.example  .env.network.example  .env.sepolia.example  .env.wallet.example  deploy_glyph_contract.sh  verify_glyph_contract.sh
scripts/formal/: sumcheck_invariants.sh
scripts/formal/sumcheck_invariants/: Cargo.toml
scripts/repro/: repro_pack.sh
scripts/tests/: run_feature_matrix.sh  run_tests.sh  verifier_symbolic.sh
scripts/tests/foundry/: GLYPHRootUpdaterExtended.sol  GLYPHRootUpdaterExtended.t.sol  GLYPHRootUpdaterMinimal.t.sol  GLYPHVerifier.sol  GLYPHVerifierConstants.sol  GLYPHVerifierTest.t.sol  GLYPH_HASH_Test.t.sol  GLYPH_IVC_Test.t.sol  GLYPH_SNARK_GROTH16_Test.t.sol  GLYPH_SNARK_IPA_Test.t.sol  GLYPH_SNARK_KZG_Test.t.sol  GLYPH_SNARK_PLONK_Test.t.sol  GLYPH_SNARK_SP1_Test.t.sol  GLYPH_STARK_Test.t.sol  GeneratedRealProofTest.t.sol  Groth16Verifier.sol  Groth16VerifierMany.sol  foundry.toml
scripts/tests/fuzz/: run_all.sh  run_cmin.sh  run_tmin.sh
scripts/tests/fuzz/workspace/: Cargo.toml
scripts/tests/fuzz/workspace/fuzz_targets/: bn254_op_traces.rs  decode_adapter_bytes.rs  decode_adapter_ir_deep.rs  decode_circle_stark_program.rs  decode_circle_stark_proof.rs  decode_ipa_receipt.rs  decode_plonky2_receipt.rs  decode_r1cs_receipt.rs  decode_standard_stark_program.rs  decode_standard_stark_proof.rs  decode_stark_ir.rs  decode_stark_receipt.rs  decode_stark_vk.rs  decode_stwo_profile.rs  decode_stwo_program.rs  decode_supernova_external_proof.rs  decode_winterfell_program.rs  diff_adapter_ir_roundtrip.rs  synthesize_stwo_proof.rs  transcript_challenges.rs  validate_state_transition_batch.rs  verify_adapter_proof.rs  verify_packed_calldata.rs
scripts/tests/rust/: adapter_error_semantics.rs  adapter_ir_property_tests.rs  bn254_emulation_property_tests.rs  chaos_stark_decode_tests.rs  chaos_truncated_inputs.rs  cli_registry_consistency_tests.rs  crypto_parameter_integrity.rs  da_envelope_tests.rs  da_integration_tests.rs  differential_receipt_verification.rs  ir_compiler_boundary_tests.rs  ivc_supernova_tests.rs  prop_test_suite.rs  risc_zero_fixture_checks.rs  stwo_prover_tests.rs  transcript_property_tests.rs  ucir_compiler_equivalence.rs
scripts/tools/: generate_glyph_verifier_constants.py
scripts/tools/converters/: stwo_to_bundle.rs
scripts/tools/fixture_generators/sp1/: Cargo.toml  run.sh
scripts/tools/fixture_generators/sp1/guest/: Cargo.toml
scripts/tools/fixture_generators/sp1/guest/src/: main.rs
scripts/tools/fixture_generators/sp1/src/: main.rs
scripts/tools/fixtures/: fast_circle_stark_baby_bear_receipt.txt  fast_circle_stark_koala_bear_receipt.txt  fast_circle_stark_receipt.txt  fast_circle_stark_receipt_large.txt  fast_plonky2_goldilocks_receipt.txt  fast_sha3_receipt.txt  fast_sha3_receipt_f64.txt  groth16_bls12381_receipt.txt  groth16_bn254_fixture.txt  halo2_bls12381_kzg_receipt.txt  (+20 more)
scripts/utils/: dump_perf_config.sh  ensure_groth16_compare_deps.sh  ensure_state_diff_fixture.sh  perf_summary.sh
src/: adapter_error.rs  adapter_facade.rs  adapter_gate.rs  adapter_ir.rs  adapter_registry.rs  adapters.rs  arena.rs  baby_bear_field.rs  binius_adapter.rs  bn254_curve.rs  bn254_field.rs  bn254_groth16.rs  bn254_ops.rs  bn254_pairing.rs  bn254_pairing_trace.rs  cairo_stark.rs  circle_fri.rs  circle_merkle.rs  circle_stark.rs  circle_stark_bundle.rs  cli_registry.rs  da.rs  e2e_proofs.rs  f128_field.rs  f64_field.rs  glv.rs  glyph_basefold.rs  glyph_bn254_field.rs  glyph_core.rs  glyph_field_simd.rs  glyph_gkr.rs  glyph_ir.rs  glyph_ir_compiler.rs  glyph_logup.rs  glyph_pairing.rs  glyph_pcs_basefold.rs  glyph_proof.rs  glyph_prover.rs  glyph_transcript.rs  glyph_verifier.rs  (+54 more)
src/glyph_core/: sumcheck.rs  tests.rs  types.rs
(+13 files in other folders)
